Add mock enpoints for inputs
